Fix margins, descriptions text align to justify and more ...

--- a/ckanext/dms/assets/css/dms.css
+++ b/ckanext/dms/assets/css/dms.css
@@ -1,5 +1,16 @@
 /* This file overwrites css from the base ckan theme */
 
+:root {
+    --primary: black;
+    --secondary: #990005;
+    --light: white;
+    --neutralgray: #dddddd;
+    --dark: black;
+    --primary65: #C14043;
+    --primary25: #E5CCCD;
+    --primary10: #EDE8E8;
+}
+
 
 body {
     background: #fff;
@@ -734,4 +745,86 @@ a.tag:hover  {
 .navbar-toggler .fa.fa-bars {
     color: #990005 !important;
     font-size: 22px;
+}
+
+
+/* DMS Work 2024 */
+@media only screen and (max-width: 767px) {
+    /* start 16 - The container's gray border takes unnecessary space */
+    .primary {
+        padding: 2%;
+    }
+    .module-content {
+        padding: 2%;
+    }
+    .box .wrapper,
+    .wrapper {
+        border: none;
+        box-shadow: none;
+    }
+    /* end 16 */
+
+    /* start 13 - The search bar, order by dropdown, number of datasets found, filters, and filter results button looks very messy.  A much neater layout is desired.*/
+    .input-group-btn .btn.btn-default.btn-lg,
+    .input-group-btn .btn.btn-default.btn-lg:hover {
+        background-color: var(--light);
+        color: var(--secondary);
+        padding-right: 12px;
+        padding-left: 12px;
+        border-left: none;
+    }
+    #field-order-by {
+        background-color: var(--neutralgray);
+        color: var(--dark);
+    }
+    .show-filters {
+        width: 100%;
+        margin-bottom: 16px;
+    }
+    .search-form .search-input-group,
+    .form-group {
+        margin-bottom: 20px;
+    }
+    #dataset-search-form h1 {
+        font-weight: 400;
+        margin-top: 20px;
+        margin-bottom: 0;
+    }
+    .page_primary_action .btn.btn-primary {
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-bottom: 0;
+    }
+    /* end 13 */
+
+    /* start 17 - Justify description text */
+    .context-info .description {
+        text-align: justify;
+    }
+    /* end 17 */
+
+    /* start 12 - Datasets sections can be improved */
+    .search-form {
+        margin-bottom: 0;
+    }
+    .dataset-item {
+        margin-top: 30px;
+        .dataset-content div:last-child {
+            text-align: justify;
+        }
+    }
+    .dataset-item .modified {
+        font-weight: 700;
+    }
+    .dataset-resources .badge.badge-default {
+        font-weight: 400;
+        padding: 4px;
+    }
+    .main {
+
+    }
+    /* end 12 */
+
+
+
 }
